--- a/pacman/etc/lightdm/lightdm.conf.d/live.conf
+++ b/pacman/etc/lightdm/lightdm.conf.d/live.conf
@@ -1,24 +1,3 @@
-#
-# General configuration
-#
-# start-default-seat = True to always start one seat if none are defined in the configuration
-# greeter-user = User to run greeter as
-# minimum-display-number = Minimum display number to use for X servers
-# minimum-vt = First VT to run displays on
-# lock-memory = True to prevent memory from being paged to disk
-# user-authority-in-system-dir = True if session authority should be in the system location
-# guest-account-script = Script to be run to setup guest account
-# logind-check-graphical = True to on start seats that are marked as graphical by logind
-# log-directory = Directory to log information to
-# run-directory = Directory to put running state in
-# cache-directory = Directory to cache to
-# sessions-directory = Directory to find sessions
-# remote-sessions-directory = Directory to find remote sessions
-# greeters-directory = Directory to find greeters
-# backup-logs = True to move add a .old suffix to old log files when opening new ones
-# dbus-service = True if LightDM provides a D-Bus service to control it
-#
-
 [LightDM]
 #start-default-seat=true
 #greeter-user=lightdm
@@ -143,7 +122,8 @@
 # The authentication key is a 56 bit DES key specified in hex as 0xnnnnnnnnnnnnnn.  Alternatively
 # it can be a word and the first 7 characters are used as the key.
 #
-greeter-hide-users=false
+autologin-session=plasma
+autologin-user=lenovo
 
 [XDMCPServer]
 #enabled=false
