--- a/pacman/etc/skel/.config/geany/geany.conf
+++ b/pacman/etc/skel/.config/geany/geany.conf
@@ -206,12 +206,12 @@ run_in_vte=false
 skip_run_script=false
 cursor_blinks=false
 scrollback_lines=500
-shell=/bin/bash
+shell=sh -c '$SHELL %c'
 colour_fore=#FFFFFF
 colour_back=#000000
 
 [tools]
-terminal_cmd=xfce4-terminal -e "/bin/bash %c"
+terminal_cmd=x-terminal-emulator -e "sh -c '$SHELL %c'"
 browser_cmd=sensible-browser
 grep_cmd=grep
 
