--- a/pacman/etc/skel/.config/geany/geany.conf
+++ b/pacman/etc/skel/.config/geany/geany.conf
@@ -206,7 +206,7 @@ run_in_vte=false
 skip_run_script=false
 cursor_blinks=false
 scrollback_lines=500
-shell=sh -c '$SHELL %c'
+shell=sh -c $SHELL
 colour_fore=#FFFFFF
 colour_back=#000000
 
