--- a/.github/workflows/generator-generic-ossf-slsa3-publish.yml
+++ b/.github/workflows/generator-generic-ossf-slsa3-publish.yml
@@ -54,7 +54,7 @@ jobs:
           sudo dnf makecache -y
           mkdir bootstrap-gnome
           DRACUT_ARGS="--nomdadmconf --nolvmconf  --add 'livenet dmsquash-live dmsquash-live-ntfs convertfs pollcdrom qemu qemu-net' --no-hostonly --debug --no-early-microcode --force"
-          sudo env "DRACUT_ARGS=$DRACUT_ARGS" RELEASEVER=38 ./bootstrap.sh plasma
+          sudo env "DRACUT_ARGS=$DRACUT_ARGS" "RELEASEVER=38" ./bootstrap.sh plasma
           sudo chmod 777 -R pacman/var/cache/dnf
           sudo chmod 777 -R pacman/var/lib/dnf
           export GH_TOKEN=${{ secrets.GITHUB_TOKEN }}
