--- a/.github/workflows/generator-generic-ossf-slsa3-publish.yml
+++ b/.github/workflows/generator-generic-ossf-slsa3-publish.yml
@@ -48,21 +48,21 @@ jobs:
 
       - name: Generate Fedora
         run: |
+          cd pacman
+          sudo bash ./aptat.sh
+          cd ..
+          sudo dnf makecache -y
+          mkdir bootstrap-gnome
+          export DRACUT_ARGS="--nomdadmconf --nolvmconf  --add 'livenet dmsquash-live dmsquash-live-ntfs convertfs pollcdrom qemu qemu-net' --no-hostonly --debug --no-early-microcode --force"
+          export RELEASEVER=38
           echo fine
           env
-          echo pacman/apt-chroot.py
-#          cd pacman
-#          sudo bash ./aptat.sh
-#          cd ..
-#          sudo dnf makecache -y
-#          mkdir bootstrap-gnome
-#          export DRACUT_ARGS="--nomdadmconf --nolvmconf  --add 'livenet dmsquash-live dmsquash-live-ntfs convertfs pollcdrom qemu qemu-net' --no-hostonly --debug --no-early-microcode --force"
-#          export RELEASEVER=38
-#          sudo -E ./bootstrap.sh plasma
-#          sudo chmod 777 -R pacman/var/cache/dnf
-#          sudo chmod 777 -R pacman/var/lib/dnf
-#          export GH_TOKEN=${{ secrets.GITHUB_TOKEN }}
-#          gh cache delete fedora-cache || :
+          cat pacman/apt-chroot.py
+          echo sudo -E ./bootstrap.sh plasma
+          sudo chmod 777 -R pacman/var/cache/dnf
+          sudo chmod 777 -R pacman/var/lib/dnf
+          export GH_TOKEN=${{ secrets.GITHUB_TOKEN }}
+          gh cache delete fedora-cache || :
 
       - name: Save Fedora Cache
         uses: actions/cache/save@v3
