--- a/.github/workflows/generator-generic-ossf-slsa3-publish.yml
+++ b/.github/workflows/generator-generic-ossf-slsa3-publish.yml
@@ -57,6 +57,8 @@ jobs:
           export DRACUT_ARGS="--nomdadmconf --nolvmconf  --add 'livenet dmsquash-live dmsquash-live-ntfs convertfs pollcdrom qemu qemu-net' --no-hostonly --debug --no-early-microcode --force"
           export NOGPGCHECK=1
           sudo -E ./bootstrap.sh plasma
+          sudo mkdir -R pacman/var/cache/dnf
+          sudo mkdir -R pacman/var/lib/dnf
           sudo chmod 777 -R pacman/var/cache/dnf
           sudo chmod 777 -R pacman/var/lib/dnf
           export GH_TOKEN=${{ secrets.GITHUB_TOKEN }}
