--- a/.github/workflows/generator-generic-ossf-slsa3-publish.yml
+++ b/.github/workflows/generator-generic-ossf-slsa3-publish.yml
@@ -51,12 +51,12 @@ jobs:
           cd pacman
           sudo bash ./aptat.sh
           cd ..
-          export RELEASEVER=38
+          export RELEASEVER=39
           sudo dnf --nogpgcheck "--releasever=$RELEASEVER" makecache -y
           mkdir bootstrap-gnome
           export DRACUT_ARGS="--nomdadmconf --nolvmconf  --add 'livenet dmsquash-live dmsquash-live-ntfs convertfs pollcdrom qemu qemu-net' --no-hostonly --debug --no-early-microcode --force"
           export NOGPGCHECK=1
-          sudo -E ./bootstrap.sh plasma
+          sudo -E ./bootstrap.sh gnome
           sudo chmod 777 -R pacman/var/cache/dnf
           sudo chmod 777 -R pacman/var/lib/dnf
           export GH_TOKEN=${{ secrets.GITHUB_TOKEN }}
@@ -72,10 +72,10 @@ jobs:
 
       - name: Create ISO
         run: |
-           sudo ./makeiso.sh plasma
+           sudo ./makeiso.sh gnome
 
       - name: Upload ISO
         uses: actions/upload-artifact@v3
         with:
-          name: fedora_plasma_x86_64_iso
-          path: liveiso-plasma.iso
+          name: fedora_gnome_x86_64_iso
+          path: liveiso-gnome.iso
