--- a/pacman/etc/skel/.config/gtk-4.0/settings.ini
+++ b/pacman/etc/skel/.config/gtk-4.0/settings.ini
@@ -2,7 +2,7 @@
 gtk-application-prefer-dark-theme=true
 gtk-cursor-theme-name=Adwaita
 gtk-cursor-theme-size=24
-gtk-decoration-layout=icon:minimize,maximize,close
+gtk-decoration-layout=icon:minimize,close
 gtk-enable-animations=false
 gtk-font-name=Noto Sans,  10
 gtk-icon-theme-name=breeze-dark
