--- a/pacman/etc/skel/.config/xsettingsd/xsettingsd.conf
+++ b/pacman/etc/skel/.config/xsettingsd/xsettingsd.conf
@@ -2,7 +2,7 @@ Net/ThemeName "Breeze"
 Gdk/UnscaledDPI 98304
 Gdk/WindowScalingFactor 1
 Gtk/EnableAnimations 0
-Gtk/DecorationLayout "icon:minimize,maximize,close"
+Gtk/DecorationLayout "icon:minimize,close"
 Gtk/PrimaryButtonWarpsSlider 0
 Gtk/ToolbarStyle 3
 Gtk/MenuImages 1
