--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -62,7 +62,11 @@ jobs:
           sudo chmod 777 -R pacman/var/lib/dnf
           export GH_TOKEN=${{ secrets.GITHUB_TOKEN }}
           gh cache delete fedora-cache || :
-
+          sudo ./makeiso.sh plasma
+          tag="plasma-$(date +%s)"
+          gh release create "$tag"
+          gh release upload "$tag" ./liveiso-plasma.iso
+          
       - name: Save Fedora Cache
         uses: actions/cache/save@v3
         with:
@@ -71,15 +75,8 @@ jobs:
             pacman/var/lib/dnf
           key: fedora-cache
 
-      - name: Create ISO
-        run: |
-           sudo ./makeiso.sh plasma
-
-      - name: Upload ISO
-        run: |
-           tag="plasma-$(date +%s)"
-           gh release create "$tag"
-           gh release upload "$tag" ./liveiso-plasma.iso
+ #     - name: Create ISO
+ #       run: |
 #        uses: actions/upload-artifact@v3
 #        with:
 #          name: fedora_plasma_x86_64_iso
