--- a/pacman/etc/skel/.config/kde.org/UserFeedback.org.kde.plasmashell.conf
+++ b/pacman/etc/skel/.config/kde.org/UserFeedback.org.kde.plasmashell.conf
@@ -1,3 +1,30 @@
+[Source-applicationVersion]
+dataSourceCommonSettings\activeState=true
+
+[Source-compiler]
+dataSourceCommonSettings\activeState=true
+
+[Source-opengl]
+dataSourceCommonSettings\activeState=true
+
+[Source-panelCount]
+dataSourceCommonSettings\activeState=true
+
+[Source-platform]
+dataSourceCommonSettings\activeState=true
+
+[Source-qpa]
+dataSourceCommonSettings\activeState=true
+
+[Source-qtVersion]
+dataSourceCommonSettings\activeState=true
+
+[Source-screens]
+dataSourceCommonSettings\activeState=true
+
+[Source-usageTime]
+dataSourceCommonSettings\activeState=true
+
 [UserFeedback]
-ApplicationStartCount=5
-LastEncouragement=@DateTime(\0\0\0\x10\0\0\0\0\0\0%\x8aL\x3\x5\x39\x8d\0)
+ApplicationStartCount=3
+ApplicationTime=1344
