--- a/pacman/etc/skel/.config/xsettingsd/xsettingsd.conf
+++ b/pacman/etc/skel/.config/xsettingsd/xsettingsd.conf
@@ -1,14 +1,14 @@
-Net/ThemeName "Breeze"
 Gdk/UnscaledDPI 98304
 Gdk/WindowScalingFactor 1
 Gtk/EnableAnimations 0
-Gtk/DecorationLayout "icon:minimize,close"
-Gtk/PrimaryButtonWarpsSlider 0
+Gtk/DecorationLayout "icon:minimize,maximize,close"
+Net/ThemeName ""
+Gtk/PrimaryButtonWarpsSlider 1
 Gtk/ToolbarStyle 3
 Gtk/MenuImages 1
 Gtk/ButtonImages 1
 Gtk/CursorThemeSize 24
-Gtk/CursorThemeName "Adwaita"
+Gtk/CursorThemeName "breeze_cursors"
+Net/SoundThemeName "ocean"
 Net/IconThemeName "breeze-dark"
 Gtk/FontName "Noto Sans,  10"
-
